--- a/PS5-CHEME-5660-Solution-Notebook-Fall-2025.ipynb
+++ b/PS5-CHEME-5660-Solution-Notebook-Fall-2025.ipynb
@@ -3078,7 +3078,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.12",
+   "display_name": "Julia",
    "language": "julia",
    "name": "julia-1.12"
   },
@@ -3086,7 +3086,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.12.1"
+   "version": "1.12.2"
   }
  },
  "nbformat": 4,
